# Reusable

./: .cproject  .gitignore  .project  LICENSE  README.md  Reusable.files  Reusable.includes  ToDo.txt
DOS_batch/: backup_visualstudio_files.txt  backup_visualstudio_project.bat
Documentation/doxygen/doxyfile/: Reusable
HTML_CSS/: basicEmailHtml_footer.html  basicEmailHtml_header.html  div_column_test.html  div_three_column_with_padding.html
Java/spring/ReactiveStreams/: readme.txt
JavaScript/fade_rollover_button/: example.html
JavaScript/node/rad-scripts/: setup.js  shared.js
JavaScript/node/reusable/: get-svn-last-changed-rev.js  get-svn-rev.js  git-sync.js  index.js  package.json  readme.txt  run-command.js  shared.js  sync.js
JavaScript/old/: linkdock.js
JavaScript/old/dynamicdrive_elementfader/: gradualfader.js
JavaScript/old/fade_rollover_button/: JSFX_FadingRollovers.js
JavaScript/old/iframe_movable_resizable_closable/: popup.js  popwiz.html
JavaScript/scrap/: closures.js  fizzbuzz.js  numbers.js  promises.js  readme.txt  scope.js  strings.js  types.js
JavaScript/scrap/d3/: 01_polygon_with_axes_d3v4.html  02_polygon_with_axes_time.html  03_polygon_with_axes_time_line.html  04_xy-zoom-multiaxis.html  05_2_poly_with_clip.html  05_poly_with_xy-zoom-multiaxis.html  06_poly_xyzoom-cleanup.html  07_poly_livedata.html  polygon_with_axes_and_zoom.html  polygon_with_axes_d3v4.html  polygon_with_axes_drag.html  polygon_with_stroke_d3v3.html  quick_polygon_d3v4.html.html  xy-zoom-multiaxis.html  zoomable_directed_graph.html
JavaScript/scrap/react/: readme.txt
Javascript/: #linkdock.js#
Javascript/css_rounded/single_class/: index.html
Javascript/iframe_movable/: dragiframe.js
Javascript/iframe_movable_resizable_closable/: popup.html  releasenotes.txt  test_1.html  test_2.html
Javascript/node/: display_arguments.js
Javascript/old/dynamicdrive_elementfader/: index.html
Javascript/old/dynamicdrive_menu/: index.html  mainstyle.css  mainstyle.css~
Oracle/: DOMSSYNC_API_test.sql  create_DOMSSYNC_API.sql  create_JTK_EVENT_trigger.sql  create_OPSTATE_API_test.sql  create_OUTAGE_REPAIR_trigger.sql  create_TAG_ENTRY_trigger.sql  create_adapter_tables.sql
Perl/dms_msg_server/: MessageAlertWebServer.pm  SimpleLogging.pm  dms_msg_server.pl  message_alert_form.html
Perl/scrap/: CountLines.pl  CountLinesWith_wc.pl  basic_tasks.pl  ref_test.pl  test.pl
bash/git/hooks/: post-receive
bash/git/three-layer-demo/: done_bottom  done_bottom_2  publish_mid  readme.txt  rebase_mid  reset_all_repos  start_bottom  start_bottom_2  work_bottom  work_bottom_2
c++/: AssertHelpers.h  BitSet.cpp  BitSet.h  ColorHelpers.cpp  ColorHelpers.h  CompInfo.cpp  CompInfo.h  DBPointerMap.hpp  DoubleHelpers.h  MathHelpers.h  PragmaMessages.h  RandomHelpers.cpp  RandomHelpers.hpp  STLContainers.h  STLExtensions.h  StandardTypes.h  SubstringSearcher.cpp  SubstringSearcher.h  TCHAR_Convert.h  TCHAR_convert.c  base64.cpp  base64.hpp  basic_types.hpp  date.h  min_max_fix.h  miniz.c  miniz.h  user_msg.h  user_msg_nt.cpp  ustring.h  ustringHelpers.cpp  ustringHelpers.h  utilities.cpp  utilities.hpp
c++/Qt/Widgets/: ScaleKeepAspectImageWidget.cpp  ScaleKeepAspectImageWidget.h
c++/Unix/: TCHAR_convert.c  export.h
c++/Unix/scrap/: ToDo.txt  configure.in  scrap.prj  scrap.pws
c++/Unix/scrap/src/: Makefile.am  main.cpp  main.h
c++/Win32/: HTTPHelpers.cpp  HTTPHelpers.h  HeapHelpers.cpp  HeapHelpers.h  InternationalizationHelpers.h  RegistryHelpers.cpp  RegistryHelpers.h  TimeHelpers.h  Win32Helpers.cpp  Win32Helpers.h  fileHelpers.cpp  fileHelpers.h
c++/Win32/MFC/: AppHelpers.cpp  AppHelpers.h  AppInstaller.cpp  AppInstaller.h  AppRegistryData.cpp  AppRegistryData.h  BaseApp.cpp  BaseApp.h  BaseDateTime.cpp  BaseDateTime.h  BaseProgressDlg.cpp  BaseProgressDlg.h  CFileHelpers.cpp  CFileHelpers.h  CRegistryHelpers.cpp  CRegistryHelpers.h  CStringHelpers.cpp  CStringHelpers.h  DeferPos.cpp  DeferPos.h  DisplayMessage.cpp  DisplayMessage.h  DllLoader.cpp  DllLoader.h  Drawgdix.h  FileScan.cpp  FileScan.h  FontDlg.cpp  FontDlg.h  FontHelpers.cpp  FontHelpers.h  FontPropertySheet.cpp  FontPropertySheet.h  ForceCorrectMFCLinkageForNonMFCModules.h  ForceCorrect_MFC_C_Linkage.h  GlobalData.h  LimitSingleInstance.h  MemDC.h  MenuHelpers.cpp  MenuHelpers.h  (+21 more)
c++/Win32/WindowsServer/: ORMapService.cpp  ORMapService.dsp  ORMapService.dsw  ORMapService.ini  ToDo.txt
c++/boost_helpers/serialization/: TestData.cpp  TestData.h  TestData.hpp  serialization_headers.h  serialize_BitSet.hpp  serialize_ustring.hpp
c++/http/: HttpAPIServer.hpp  HttpServer.hpp  HttpsAPIServer.hpp  HttpsAPIServerConstants.hpp  HttpsClient.hpp  HttpsClientUtilities.h  HttpsConstants.hpp  HttpsServer.hpp  base_chunked_handler.hpp  http_chunked_client.cpp  http_chunked_client.hpp  http_helpers.hpp  http_utilities.hpp  quick_http_server.hpp  quick_http_server_handler.hpp
c++/http/Simple-Web-Server/: server_http.hpp  server_https.hpp
c++/http/quick_http/: quick_http.hpp  quick_http_client.hpp  quick_http_server_handler.hpp
c++/http/quick_http_components/: client_base.hpp  (+8 more)
c++/oauth/: HMAC_SHA1.h  oauthlib.cpp  oauthlib.h
c++/prtree/: README
c++/scrap/autotools/gentoo/: configure.in  readme.txt
c++/scrap/autotools/gentoo/src/: Makefile.am  main.cpp
c++/scrap/portable/: CMakeLists.txt  google.cpp  make_asio  make_scrap  make_scrap_all  make_scrap_debug  make_scrap_debug_fresh  make_scrap_old  make_scrap_release  readme.txt  run_scrap  scrap.cpp  scrap.hpp  scrap.sln  scrap.vcxproj  scrap_old.cpp
c++/scrap/portable/data/: DIA_2018.json  SPY_2018.json
c++/scrap/portable/old/: asio.cpp  make_google  scrap_old.hpp
c++/sqlite/: readme.txt
kotlin/spring/: README.md
php/etrade_api/: MDM_readme.txt
php/minify_javascript/: greadercomments.js  greadercomments_minified.js  minify.php  minify.php~  test.js
php/paypalpatron/: ToDo.txt  ToDo.txt.~1.1.~  ToDo.txt~  index.php  javascript_e_functions.php  javascript_f_functions.php  javascript_summary_functions.php
php/scrap/: ajax_dropdown.php  scrap.php
(+547 files in other folders)
